fixed JS to only include top 10 highscores and added styling to the option, question, and button elements

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <nav>
-            <button id="hi-scores" class="hi-scores">View High Scores</button>>
+            <button id="hi-scores" class="hi-scores">View High Scores</button>
             <div class="timer-count" id="timer"></div>
         </nav>
         <h1>Coding Quiz</h1>
